# ViennaCS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cmake/: cpm.cmake
examples/: CMakeLists.txt
examples/atomicLayerDeposition/: CMakeLists.txt  atomicLayerDeposition.cpp  atomicLayerDeposition.py  geometry.hpp
examples/diffusion/: CMakeLists.txt  diffusion.cpp  geometry.hpp
examples/diffusionImplicit/: CMakeLists.txt  config.txt  diffusionImplicit.cpp  geometry.hpp  parameters.hpp  solver.hpp
examples/plasmaDamage/: CMakeLists.txt  config.txt  geometry.hpp  particle.hpp  plasmaDamage.cpp
include/viennacs/: csAtomicLayerProcess.hpp  csBVH.hpp  csBoundingVolume.hpp  csDenseCellSet.hpp  csDiffusion.hpp  csMeanFreePath.hpp  csPointSource.hpp  csSegmentCells.hpp  csTestAssert.hpp  csTracePath.hpp  csTracing.hpp  csTracingKernel.hpp  csTracingParticle.hpp  csUtil.hpp
python/: CMakeLists.txt  __init__.py.in  pyWrap.cpp
tests/: CMakeLists.txt
tests/planes/: CMakeLists.txt  planes.cpp
